Bug 153633 - dark mode: Color description in Defaults Colors hard to read
Summary: dark mode: Color description in Defaults Colors hard to read
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks: Dark-Mode
  Show dependency treegraph
 
Reported: 2023-02-15 12:39 UTC by Xisco Faulí
Modified: 2023-03-31 12:59 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (24.41 KB, image/png)
2023-02-15 12:39 UTC, Xisco Faulí
Details
Invisible list in dark-mode settings.png (106.75 KB, image/png)
2023-03-31 12:51 UTC, Piotr Osada
Details
Settings list visible after restarting LO.png (93.78 KB, image/png)
2023-03-31 12:52 UTC, Piotr Osada
Details
Switching from dark to light mode (system) by 'Apply' button.png (107.36 KB, image/png)
2023-03-31 12:59 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-02-15 12:39:50 UTC
Created attachment 185378 [details]
Screenshot

Steps to reproduce:
1. Go To Options - Charts - Defaults Colors
2. Choose any color

-> See screenshot

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bfbbdab13f16adf66f1afb9e2a2a103162927ba3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-02-15 12:40:20 UTC
@Caolán, @Rafael, I thought you might be interested in this issue
Comment 2 Commit Notification 2023-02-15 16:56:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0c9f93e9079a60725e6ff62bfc4a6a8a7254680e

tdf#153633 color description in chart colors options always black

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2023-02-15 16:58:14 UTC
looks ok for me in trunk, backport to 7-5 in gerrit
Comment 4 Commit Notification 2023-02-16 08:24:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/de7a636cb5a5527a7e9ab506c3a7829607cd6f11

tdf#153633 color description in chart colors options always black

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2023-02-16 08:25:03 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02444789bb5e59e2582fdb92a5852db9c6471eac
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 6 Piotr Osada 2023-03-31 12:51:59 UTC
Created attachment 186360 [details]
Invisible list in dark-mode settings.png

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 53bb9681a964705cf672590721dbc85eb4d0c3a2
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-GB
Calc: threaded

I confirm that the colour description is now clearly readable.

But the settings list is invisible after changing from system theme to dark, simply applying without restarting the program.
It's just a detail. But it's nice to have the opportunity to work without restarting.
Comment 7 Piotr Osada 2023-03-31 12:52:54 UTC
Created attachment 186361 [details]
Settings list visible after restarting LO.png

After restart it is good.
Comment 8 Piotr Osada 2023-03-31 12:59:39 UTC
Created attachment 186364 [details]
Switching from dark to light mode (system) by 'Apply' button.png

Actually, it is a 'Apply' bug. By clicking 'OK' and opening again, the window is displayed correctly.