tdf#153633 color description in chart colors options always black

even in dark mode. There are some other visual glitches here, just
erase the rendercontext before drawing to it.

Change-Id: I487375614c654124e116c3e9f28d78bf7f87da4e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147072
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>